# ai-file-convertor-to-markdown

./: .gitignore  LICENSE  README.md  convert.py  package-lock.json  package.json  pyproject.toml
.github/workflows/: npm-publish.yml
src/: cli.ts  index.ts
